# data_fetcher

./: .env.sample  .gitignore  CRYPTO_DATA_CLI_PLAN.md  README.md  notebook.py  pyproject.toml  requirements.txt  setup.py  startdatesactiveonly.txt  tests.py
data_fetcher/: __init__.py  cli.py  data.py  models.py
data_fetcher/providers/: __init__.py  alpaca.py  binance_archive.py  crypto.py  polygon.py
data_fetcher/storage/: __init__.py  csv.py  sqlite.py
scripts/: symbol_lifetime_report.py
tests/: data_tests.py  test_data.py
