[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "data-fetcher"
version = "0.2.0"
description = "A Python package for fetching financial data from various sources"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
dependencies = [
    "ccxt",
    "pandas",
    "numpy",
    "python-dateutil",
    "tenacity",
    "typer>=0.9",
]

[project.optional-dependencies]
crypto = ["ccxt"]
alpaca = ["alpaca-py", "alpaca-trade-api"]
polygon = ["requests"]
all = ["ccxt", "alpaca-py", "alpaca-trade-api", "requests"]
dev = ["pytest", "pytest-cov", "pytest-mock", "ruff", "typer>=0.9"]

[project.scripts]
data-fetcher = "data_fetcher.cli:app"

[tool.setuptools.packages.find]
include = ["data_fetcher*"]


[tool.ruff]
exclude = ["notebook.py"]

[tool.pytest.ini_options]
testpaths = ["tests"]
